--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vuex": "^4.0.2"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.0.0",
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/vue-fontawesome": "^3.0.0-5",
