alter heroku env file

--- a/.env.heroku
+++ b/.env.heroku
@@ -1,17 +1,17 @@
 APP_NAME=PaiPhoto
-APP_ENV=local
+APP_ENV=heroku
 APP_KEY=base64:lUSODpX1fMJsE6Jx567AasZYJaiXZIg58Tz40e9O6ck=
 APP_DEBUG=true
-APP_URL=http://localhost:8888
+APP_URL=https://pai-photo.herokuapp.com/
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=tvcpw8tpu4jvgnnq.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=pai_photo
-DB_USERNAME=pai
-DB_PASSWORD=tigers
+DB_DATABASE=q3ge8ouaiandf3ia
+DB_USERNAME=deb4ecyoqmewuf3t
+DB_PASSWORD=lk58s8d0n67pwoff
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
