--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "1.*",
         "league/flysystem-aws-s3-v3": "~1.0",
-        "fakerphp/faker": "^1.9.1"
+        "fakerphp/faker": "^1.9.1",
+        "fzaninotto/faker": "^1.9"
     },
     "require-dev": {
         "facade/ignition": "^1.16.15",
